--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,3 +52,4 @@ Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Config/Needs/website: poissonconsulting/poissontemplate
